--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@
 
 * {
   box-sizing: border-box;
+  cursor: none !important;
 }
 
 a {
@@ -77,7 +78,7 @@ main {
   justify-content: space-between;
 }
 .marginRight {
-  margin-right: 25%;
+  margin-right: 28%;
 
 }
 
@@ -109,7 +110,7 @@ main {
 }
 
 .cabecera__menu {
-  width: 25%;
+  width: 28%;
   /* max-width: 390px; */
 }
 @media (max-width:1024px){
@@ -183,6 +184,10 @@ main {
 .work__project {
   padding-bottom: 15vmax;
 }
+.work__project a{
+  z-index: -10;
+  position: relative;
+}
 .project__title {
   font-weight: 100;
   font-size: clamp(1.5rem, 1.1906rem + 1.375vw, 2.6rem);
@@ -193,6 +198,8 @@ main {
   width: 100%;
   margin-bottom: 2vw;
   position: relative;
+
+
 }
 .project__info {
   align-items: flex-start;
@@ -238,6 +245,7 @@ padding-bottom: 1.5em;
   border: none;
   border-bottom: 3px solid var(--clr-primary-400);
   transition: 0.3s ease-in-out;
+  z-index: 5;
 }
 .project__info__button:hover{
   color: var(--clr-neutral-100);
@@ -263,15 +271,49 @@ padding-bottom: 1.5em;
 }
 
 /*  ========== About =========== */
+.about__texts{
+  position: relative;
+  padding-bottom: 5rem;
+}
 .about__texts__element{
   font-weight: 300;
   font-size: clamp(1.5rem, 1.0781rem + 1.8750vw, 3rem);
   padding-bottom: 1em;
+  /* mix-blend-mode: difference; */
+  z-index: 3;
+
+}
+
+.about__img__element{
+  height: 50vh;
+  max-height: 400px;
+  pointer-events: none;
+  position: absolute;
+  opacity: 0;
+  left: 150%;
+  top:20%;
+  transform: translate3d(calc(-100% - 6vw), -30%, 0) translate3d(0, 70px, 0);
+  z-index: -2;
+}
+.about__texts__hover{
+  color: var(--clr-neutral-200);
+
+  display: inline-block;
+  position: relative;
+  transition: opacity 0.4s;
+}
+
+
+
+.about__texts__hover:hover + .about__img__element {
+  opacity: 1;
+  transform: translate3d(calc(-100% - 6vw), -30%, 0) rotate3d(0,0, 1, 4deg);
+  transition: all 0.4s;
 }
 
 .about__subtitle{
-  padding-top: 5em;
-  padding-bottom: 2.5em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   text-transform: uppercase;
   font-weight: 100;
   font-size: clamp(1.75rem, 1.1875rem + 2.5000vw, 3.75rem);
@@ -281,7 +323,7 @@ padding-bottom: 1.5em;
 
 .about__info{
 display: flex;
-padding-bottom: 7rem;
+padding-bottom: 4rem;
 
 }
 
@@ -333,13 +375,14 @@ padding-bottom: 7rem;
 }
 
 
-/* Herramientas */
+/*  ========== Herramientas =========== */
+
 
 .about__tools div, .about__skills div{
   margin-left: 25%;
   display: flex;
   align-items: flex-start;
-  padding-bottom: 7rem;
+  padding-bottom: 4rem;
   flex-wrap: wrap;
   
 }
@@ -435,32 +478,73 @@ padding-bottom: 7rem;
 }
 
 
+
+
 /* Animación hover sobre proyectos */
 
 .cursor {
+  --size: 10px;
+	position: fixed;
+	width: var(--size);
+	height: var(--size);
+	top: calc(var(--size)/-2);
+	left: calc(var(--size)/-2);
+	transform: translate(var(--cursor-x, -100px), var(--cursor-y, -100px)) translateZ(0);
+	pointer-events: none;
+	transition: none;
+	z-index: 999;
+	will-change: transform;
+  
+
+}
+
+.cursor__inner{
+  display: block;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: absolute;
-  visibility:hidden;
-  opacity: 0;
-  width: 8rem;
-  height: 8rem;
-  background-color: var(--clr-primary-400);
   border-radius: 50%;
-  pointer-events: none;
-  transform: translate(-50%, -60%);
-  transition: opacity 0.3s ease-in-out; 
-  transition-property: background, transform;
-  transform-origin: 100% 100%;
-  z-index:1; 
-  font-size: clamp(1.0rem, 1.0195rem + 0.4688vw, 1.15rem);
+  background-color: var(--clr-primary-400);
+  transition: all 0.15s ease-in-out;
+  opacity: 1;
+  transform: scale(1) translateZ(0);
+  mix-blend-mode: difference;
+}
 
-  font-weight: 400;
-  text-align: center;
+.cursor-scaleSmall{
+  --size: 40px;
+  mix-blend-mode: difference;
+
+}
+
+.cursor-scaleBig{
+  --size: 120px;
+}
+
+.cursor__text{
+  font-size: 1rem;
+  font-weight: 600;
+  opacity: 0;
+  visibility: hidden;
+  text-transform: uppercase;
+  text-align: center
+
+;
 
 }
 .visibility{
   visibility: visible;
   opacity: 1;
+
+} 
+
+.hidden{
+  visibility: hidden;
+  opacity: 0;
 }
+
+
+
+
