--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,15 @@ a {
 }
 
 main {
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   overflow: hidden;
+
+  opacity: 0;
+  transition: all .3s ease-in-out;
+  display: none;
 }
+
 
 .container {
   width: 86%;
@@ -81,6 +86,49 @@ main {
   margin-right: 28%;
 
 }
+
+/* ========== Animación Inicial ========== */
+
+
+.container-animation {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  flex-wrap: nowrap;
+}
+
+.animation__line {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  color: #EDF0F2;
+  opacity: 0;
+  font-weight: 600;
+  letter-spacing: 1vw;
+  font-size: clamp(0.6rem, 0.0462rem + 2.4615vw, 3rem);
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+
+
+.mainReady{
+  opacity: 1 !important;
+  display: block !important;
+}
+
+.animationNone{
+  opacity: 0;
+  display: none !important;
+}
+
+.borderAnimation {
+  -webkit-text-stroke: .5px var(--clr-neutral-100);
+  color: var(--clr-primary-900);
+}
+
 
 /* ========== Menú ========== */
 .container-cabecera {
@@ -178,11 +226,15 @@ main {
   font-weight: 600;
   font-size: clamp(6rem, 2rem + 17.5vw, 20rem);
   text-align: left;
-  padding: 10rem 0;
+  padding: 5rem 0;
+  display: block;
+    position: relative;
+    top: -100px;
+
 }
 
 .work__project {
-  padding-bottom: 15vmax;
+  padding-bottom: 10vmax;
 }
 .work__project a{
   z-index: -10;
